--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <meta
+      name="description"
+      content="Daily yoga is a fitness institution that gives you training on yoga, fitness and more"
+    />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -68,7 +71,7 @@
         </div>
         <div class="col-md-6">
           <figure>
-            <img src="images/yoga3.jpg" alt="Yoga Vector" />
+            <img src="images/yoga1.jpg" alt="Yoga Vector" />
           </figure>
         </div>
       </div>
@@ -83,7 +86,7 @@
         <div class="row">
           <div class="col-md-4">
             <figure>
-              <img src="images/balance1.png" alt="benifits" />
+              <img src="images/benifit1.png" alt="benifits" />
             </figure>
 
             <p>
@@ -94,7 +97,7 @@
           </div>
           <div class="col-md-4">
             <figure>
-              <img src="images/balance2.png" alt="benifits" />
+              <img src="images/benifit2.png" alt="benifits" />
             </figure>
 
             <p>
@@ -105,7 +108,7 @@
           </div>
           <div class="col-md-4">
             <figure>
-              <img src="images/balance3.png" alt="benifits" />
+              <img src="images/benifit3.png" alt="benifits" />
             </figure>
 
             <p>
@@ -117,15 +120,61 @@
         </div>
       </div>
     </section>
+    <section class="container instructor">
+      <div class="row">
+        <div class="col-md-8">
+          <h2>Know your <span>Instructor</span></h2>
+          <h3>Ashutosh Bisoyi</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+            dolore, quas non possimus ad vitae itaque id saepe omnis rerum
+            praesentium totam alias expedita molestias deserunt odio
+            consectetur. Ipsa, explicabo.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+            dolore, quas non possimus ad vitae itaque
+          </p>
+          <ul>
+            <a
+              href="https://www.facebook.com/AshutoshBisoyiFB"
+              target="_blank"
+              rel="noopener"
+            >
+              <li><i class="fab fa-facebook-f"></i></li>
+            </a>
+            <a
+              href="https://www.instagram.com/ashutoshbisoyi/"
+              target="_blank"
+              rel="noopener"
+            >
+              <li><i class="fab fa-instagram"></i></li>
+            </a>
+            <a
+              href="https://twitter.com/ashutoshbisoyi0"
+              target="_blank"
+              rel="noopener"
+            >
+              <li><i class="fab fa-twitter"></i></li>
+            </a>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <figure>
+            <img src="images/ashutoshbisoyi-IIC.png" alt="instructor img" />
+          </figure>
+        </div>
+      </div>
+    </section>
     <section class="container-fluid form-section">
       <h2>Get enrolled for the <span>Fitness Movement</span></h2>
       <div class="row container">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <figure>
-            <img src="images/yoga4.png" alt="Yoga Vector" />
+            <img src="images/yoga2.png" alt="Yoga Vector" />
           </figure>
         </div>
-        <div class="col-md-6 d-flex flex-column justify-content-center">
+        <div class="col-md-8 d-flex flex-column justify-content-center">
           <form>
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Your Name" />
