--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
               Weith us, you can learn how to feel and hear your inner self to
               refine your harmony with your body and soul
             </p>
-            <button>Join Now</button>
+            <a href="#form-id">
+              <button>Join Now</button>
+            </a>
           </header>
         </div>
         <div class="col-md-6">
@@ -163,7 +165,7 @@
         </div>
       </div>
     </section>
-    <section class="container-fluid form-section">
+    <section class="container-fluid form-section" id="form-id">
       <h2>Get enrolled for the <span>Fitness Movement</span></h2>
       <div class="row container">
         <div class="col-md-4">
@@ -204,6 +206,18 @@
             </center>
           </form>
         </div>
+      </div>
+    </section>
+    <section class="container sponser">
+      <p>Powered By</p>
+      <h3>HonourCreators</h3>
+      <div class="visit">
+        <a href="#">
+          <button><i class="fab fa-google-play mr-2"></i>Install App</button>
+        </a>
+        <a href="https://honourcreators.com/">
+          <button><i class="fas fa-globe mr-2"></i>Visit Website</button>
+        </a>
       </div>
     </section>
     <footer>
