--- a/index.html
+++ b/index.html
@@ -27,33 +27,35 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
-    <title>Yoga</title>
+    <title>Yoga 3day Workshop</title>
   </head>
 
   <body>
     <nav class="container">
-      <span>Daily Yoga</span>
+      <span><img src="images/logo1.png" height="50px" width="90px" /></span>
       <ul>
         <a
-          href="https://www.facebook.com/AshutoshBisoyiFB"
+          href="https://www.facebook.com/honourcreators/"
           target="_blank"
           rel="noopener"
         >
           <li><i class="fab fa-facebook-f"></i></li>
         </a>
+
         <a
-          href="https://www.instagram.com/ashutoshbisoyi/"
+          href="https://www.instagram.com/honourcreators/"
           target="_blank"
           rel="noopener"
         >
           <li><i class="fab fa-instagram"></i></li>
         </a>
+
         <a
-          href="https://twitter.com/ashutoshbisoyi0"
+          href="https://linkedin.com/company/honourcreators"
           target="_blank"
           rel="noopener"
         >
-          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-linkedin"></i></li>
         </a>
       </ul>
     </nav>
@@ -61,106 +63,196 @@
       <div class="row">
         <div class="col-md-6">
           <header>
-            <h1>Welcome to daily <span>Yoga</span> classes</h1>
+            <h1>Welcome to 3 days <span>Yoga Workshop</span></h1>
             <p>
-              Weith us, you can learn how to feel and hear your inner self to
-              refine your harmony with your body and soul
+              <em
+                >Form <strong>28<sup>th</sup> August</strong> to
+                <strong>30<sup>th</sup> August 2020</strong></em
+              >
+            </p>
+            <p>
+              Register your self in just
+              <span class="badge badge-secondary" style="font-size: large;"
+                >&#8377; 49/-</span
+              >
+              and stay fit and positive at home. Come Refresh And Rejoice
+              Yourself Removing the Boredom, Obesity, and Aches which you have
+              Developed during your stay at home during this pandemic, Register
+              Soon...
             </p>
             <a href="#form-id">
-              <button>Join Now</button>
+              <button>Register Now</button>
             </a>
           </header>
         </div>
         <div class="col-md-6">
           <figure>
-            <img src="images/yoga1.jpg" alt="Yoga Vector" />
+            <img src="images/yoga3.png" alt="Yoga Vector" />
           </figure>
         </div>
       </div>
     </section>
+
     <section class="container-fluid benifit-section">
       <div class="container">
         <h2>
-          Create healthy change through <span>body</span>,<br />
-          <span>mind</span> and
-          <span>spirit</span>
+          Bring <span>Healthy</span> Changes <br />
+          to <span>Your</span>
         </h2>
         <div class="row">
           <div class="col-md-4">
             <figure>
-              <img src="images/benifit1.png" alt="benifits" />
-            </figure>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Voluptatem enim possimus velit expedita incidunt est repellendus
-              sunt.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <figure>
               <img src="images/benifit2.png" alt="benifits" />
             </figure>
-
+            <h3>Body</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Voluptatem enim possimus velit expedita incidunt est repellendus
-              sunt.
+              Many yoga poses require you to bear your body weight in new ways,
+              including balancing on one leg or supporting yourself with your
+              arms.
             </p>
           </div>
           <div class="col-md-4">
             <figure>
               <img src="images/benifit3.png" alt="benifits" />
             </figure>
-
+            <h3>Mind</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Voluptatem enim possimus velit expedita incidunt est repellendus
-              sunt.
+              Yoga increases body awareness, relieves stress, reduces muscle
+              tension, strain, increases concentration, and calms and centers
+              the nervous system.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <figure>
+              <img src="images/benifit1.png" alt="benifits" />
+            </figure>
+            <h3>Spirit</h3>
+            <p>
+              Doing yoga improves your mind-body connection, giving you a better
+              awareness of your own body. It gives you mentally relaxation &
+              Stress free.
             </p>
           </div>
         </div>
       </div>
     </section>
+    <section class="container-fluid benifit-section-two">
+      <div class="container">
+        <h2>
+          Benifits You'll Get <br />
+          from this <span>3 Days Workshop</span>
+        </h2>
+        <div class="row">
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/01.png" alt="benifits" />
+              </figure>
+              <h5>Boost Your Energy</h5>
+            </div>
+          </div>
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/02.png" alt="benifits" />
+              </figure>
+              <h5>Manage Illnesses</h5>
+            </div>
+          </div>
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/03.png" alt="benifits" />
+              </figure>
+              <h5>Sleep Improvement</h5>
+            </div>
+          </div>
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/04.png" alt="benifits" />
+              </figure>
+              <h5>Increse Concentration</h5>
+            </div>
+          </div>
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/05.png" alt="benifits" />
+              </figure>
+              <h5>Relax Entire Body</h5>
+            </div>
+          </div>
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/06.png" alt="benifits" />
+              </figure>
+              <h5>Boosted Confidence</h5>
+            </div>
+          </div>
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/07.png" alt="benifits" />
+              </figure>
+              <h5>Boost Immunity</h5>
+            </div>
+          </div>
+          <div class="col-md-3 col-6">
+            <div class="my-card">
+              <figure>
+                <img src="images/08.jpg" alt="benifits" />
+              </figure>
+              <h5>Participation Reward</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="container instructor">
       <div class="row">
         <div class="col-md-8">
           <h2>Know your <span>Instructor</span></h2>
-          <h3>Ashutosh Bisoyi</h3>
+          <h3>Mrs. Leena Biswal</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-            dolore, quas non possimus ad vitae itaque id saepe omnis rerum
-            praesentium totam alias expedita molestias deserunt odio
-            consectetur. Ipsa, explicabo.
+            Mrs. Leena Biswal is a Yoga Trainer and Fashion Choreographer. She
+            is already trained many students for Yoga, Dance, and Modeling. She
+            is attending many state level and National Level programs as a Judge
+            and Respected with many honorable Awards from different places. She
+            is the organizer of a state-level Fashion Show, ie:- Odisha Shinning
+            Icon. Hope you will enjoy this session and will get benefited from
+            this pandemic situation. Stay Home and Stay Safe.
           </p>
 
           <ul>
             <a
-              href="https://www.facebook.com/AshutoshBisoyiFB"
+              href="https://www.facebook.com/leena.biswal.589/"
               target="_blank"
               rel="noopener"
             >
               <li><i class="fab fa-facebook-f"></i></li>
             </a>
             <a
-              href="https://www.instagram.com/ashutoshbisoyi/"
+              href="https://www.instagram.com/_leena_biswal_/"
               target="_blank"
               rel="noopener"
             >
               <li><i class="fab fa-instagram"></i></li>
             </a>
             <a
-              href="https://twitter.com/ashutoshbisoyi0"
+              href="https://api.whatsapp.com/send?phone=919337663465&amp;text=&amp;source=&amp;data="
               target="_blank"
               rel="noopener"
             >
-              <li><i class="fab fa-twitter"></i></li>
+              <li><i class="fab fa-whatsapp"></i></li>
             </a>
           </ul>
         </div>
         <div class="col-md-4">
           <figure>
-            <img src="images/ashutoshbisoyi-IIC.png" alt="instructor img" />
+            <img src="images/instructor.png" alt="instructor img" />
           </figure>
         </div>
       </div>
@@ -170,51 +262,56 @@
       <div class="row container">
         <div class="col-md-4">
           <figure>
-            <img src="images/yoga2.png" alt="Yoga Vector" />
+            <img src="images/yoga.png" alt="Yoga Vector" />
           </figure>
         </div>
         <div class="col-md-8 d-flex flex-column justify-content-center">
-          <form>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name" />
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <input
-                  type="email"
-                  class="form-control"
-                  placeholder="Your Email"
-                />
-              </div>
-              <div class="form-group col-md-6">
-                <input
-                  type="number"
-                  class="form-control"
-                  placeholder="Your Contact"
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <textarea
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Your Name" />
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <input
+                type="email"
                 class="form-control"
-                placeholder="Your Address"
-                rows="3"
-              ></textarea>
+                placeholder="Your Email"
+              />
             </div>
-            <center>
-              <button type="submit">Submit</button>
-            </center>
-          </form>
+            <div class="form-group col-md-6">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="10digit Phone No."
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <textarea
+              class="form-control"
+              placeholder="Your Address"
+              rows="3"
+            ></textarea>
+          </div>
+
+          <center>
+            <button type="submit">Submit</button>
+          </center>
         </div>
       </div>
     </section>
+
     <section class="container sponser">
-      <p>Powered By</p>
+      <p>This workshop is powered by</p>
       <h3>HonourCreators</h3>
       <div class="visit">
-        <a href="#">
+        <a
+          href="https://play.google.com/store/apps/details?id=com.developers.honorcreators"
+          target="_blank"
+        >
           <button><i class="fab fa-google-play mr-2"></i>Install App</button>
         </a>
+        &nbsp;
         <a href="https://honourcreators.com/">
           <button><i class="fas fa-globe mr-2"></i>Visit Website</button>
         </a>
@@ -222,7 +319,7 @@
     </section>
     <footer>
       <p>
-        This website is developed by
+        Digitalization with <i class="fas fa-heart"></i> Team
         <a href="https://honourcreators.com/">HonourCreators</a>
       </p>
     </footer>
